--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.3
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.4
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
